--- a/src/components/CarouselProject/styles.module.css
+++ b/src/components/CarouselProject/styles.module.css
@@ -1,22 +1,43 @@
 .container{
-  width: 60%;
+  width: 75%;
   height: fit-content;
   border: 0.1rem solid var(--primary);
+  border-radius: 0.5rem;
+  padding: 0.5rem ;
 }
 
 .carousel{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 5rem;
-  border: 0.1rem solid var(--outline);
-
   & li{
     list-style: none;
   }
 }
 
 .image{
+  border: 0.1rem solid var(--outline);
+  border-radius: 0.5rem;
+
   width: 13rem;
-  height: 10rem;
+  height: 13rem;
+
+  @media (max-width: 680px){
+    width: 12rem;
+    height: 12rem;
+  }
+
+  @media (max-width: 630px){
+    width: 14rem;
+    height: 13rem;
+  }
+
+
+  @media (max-width: 400px){
+    width: 13rem;
+    height: 13rem;
+  }
+
+
+  @media (max-width: 300px){
+    width: 11rem;
+    height: 11rem;
+  }
 }
