--- a/src/components/HomePage/styles.module.css
+++ b/src/components/HomePage/styles.module.css
@@ -1,4 +1,4 @@
-.homePage{
+.container{
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -6,8 +6,7 @@
 }
 
 
-.container{
-  width: 100vw;
+.information{
   display: flex;
   justify-content: space-between;
 }
@@ -78,9 +77,20 @@
 }
 
 .portfolio{
-  width: 100%;
+  width: 100vw;
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
+}
+
+.btnMyPortfolio{
+  width: 10rem;
+  height: 3rem;
+  font-size: 1rem;
+  font-weight: bold;
+  background: var(--primary);
+  color: var(--white);
+  border-radius: 0.5rem;
+  align-self: flex-start;
+  margin: 0 0 1rem 1rem ; 
 }
