--- a/src/components/CarouselProject/styles.module.css
+++ b/src/components/CarouselProject/styles.module.css
@@ -19,9 +19,20 @@
   width: 13rem;
   height: 13rem;
 
-  @media (max-width: 680px){
+  @media (max-width: 720px){
     width: 12rem;
     height: 12rem;
+  }
+
+  @media (max-width: 680px){
+    width: 11rem;
+    height: 12rem;
+  }
+
+
+  @media (max-width: 640px){
+    width: 10rem;
+    height: 11rem;
   }
 
   @media (max-width: 630px){
@@ -29,15 +40,35 @@
     height: 13rem;
   }
 
+  @media (max-width: 480px){
+    width: 12rem;
+    height: 12rem;
+  }
 
-  @media (max-width: 400px){
-    width: 13rem;
-    height: 13rem;
+  @media (max-width: 420px){
+    width: 10rem;
+    height: 11rem;
+  }
+
+  @media (max-width: 380px){
+    width: 9rem;
+    height: 11rem;
+  }
+
+  @media (max-width: 360px){
+    width: 8rem;
+    height: 11rem;
   }
 
 
-  @media (max-width: 300px){
-    width: 11rem;
+  @media (max-width: 340px){
+    width: 7rem;
+    height: 11rem;
+  }
+
+
+  @media (max-width: 310px){
+    width: 5.5rem;
     height: 11rem;
   }
 }
