--- a/src/components/CarouselProject/styles.module.css
+++ b/src/components/CarouselProject/styles.module.css
@@ -23,7 +23,7 @@
       align-items: center;
       text-decoration: none;
       color: var(--black);
-      padding: 0.2rem;
+      padding: 0.5rem 0.2rem;
 
       border: 0.1rem solid var(--outline);
       border-radius: 0.5rem;
@@ -34,6 +34,7 @@
 .image{
   width: 13rem;
   height: 13rem;
+  border-radius: 0.5rem;
 
   @media (max-width: 720px){
     width: 12rem;
